# build

.github/workflows/: edulink-agent-build.yml  tee-time-agent-build.yml
edulink-agent/: .env.example  Dockerfile  README.md  pyproject.toml
edulink-agent/k8s/: argocd-application.yaml  deployment.yaml  secret-example.yaml
edulink-agent/src/edulink_agent/: __init__.py  api.py  config.py  conversation.py  main.py  models.py  scraper.py  summariser.py  utils.py
tee-time-agent/: .env.example  Dockerfile  README.md  pyproject.toml
tee-time-agent/k8s/: argocd-application.yaml  cronjob.yaml  secret-example.yaml
tee-time-agent/src/tee_time_agent/: __init__.py  adk_agent.py  config.py  date_window.py  main.py  models.py  ollama_client.py  playwright_client.py  telegram.py
